<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/delete_all_articles"/>

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#DDD"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/dialog_info"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="1dp"
android:layout_below="@+id/separator"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cancelButton"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="7dp"
            android:text="@string/no_text"/>

        <View
            android:id="@+id/separatortwo"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#DDD"
            android:layout_marginTop="0dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/okButton"
            android:gravity="center_horizontal"
            android:textSize="16dp"
            android:paddingBottom="10dp"
            android:paddingTop="7dp"
            android:text="@string/yes_text"
            android:onClick=""
            />

    </LinearLayout>
</RelativeLayout>